Fix to text wrap for code in blog post

--- a/resources/css/dashxe.css
+++ b/resources/css/dashxe.css
@@ -372,6 +372,7 @@ code {
     font-size: .8rem;
     border-radius: var(--br-md);
     display: inline-block;
+    text-wrap: auto;
 }
 
 strong {
